# robot-control-stack-tg2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: cpp.yaml  docs.yml  py.yaml
docs/: conf.py  documentation.md
docs/_static/: version_switcher.json
docs/contributing/: index.md
docs/documentation/: getting_started.md
docs/extensions/: rcs_fr3.md  rcs_panda.md  rcs_robotics_library.md
docs/getting_started/: index.md
examples/fr3/: grasp_digit_demo.py  grasp_ompl_demo.py
examples/tg2/: tg2_cartesian_control.py  tg2_joint_control.py
extensions/: README.md
extensions/rcs_fr3/: CMakeLists.txt  Makefile  README.md  pyproject.toml
extensions/rcs_panda/: CMakeLists.txt  Makefile  README.md  pyproject.toml
extensions/rcs_realsense/: pyproject.toml
extensions/rcs_robotics_library/: CMakeLists.txt  pyproject.toml
extensions/rcs_so101/: Makefile  pyproject.toml
extensions/rcs_so101/src/pybind/: SO101.h  rcs.cpp
extensions/rcs_so101/src/rcs_so101/: creators.py  hw.py
extensions/rcs_tacto/: pyproject.toml
extensions/rcs_tg2/: README.md  pyproject.toml
extensions/rcs_tg2/src/rcs_tg2/: __init__.py  __main__.py  creators.py  envs.py  utils.py
extensions/rcs_tg2/src/rcs_tg2/_core/: __init__.py  hw.py
extensions/rcs_usb_cam/: pyproject.toml
extensions/rcs_xarm7/: pyproject.toml
include/rcs/: Robot.h
python/rcs/: __init__.py
src/pybind/: rcs.cpp
src/rcs/: Pose.cpp
src/sim/: SimGripper.cpp  SimGripper.h  test.cpp  (+2 more)
tests/: debug_no_movement.py  test_load_tg2_scene.py
(+40 files in other folders)
