[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcs_tg2"
version = "0.0.1"
description = "Scaffold for RCS TG2 integration (Python stubs)"
dependencies = [
    "rcs>=0.5.0",
    "typer>=0.9",
    "numpy>=1.23",
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "isort"]

[tool.setuptools]
packages = ["rcs_tg2", "rcs_tg2._core"]
package-dir = {"" = "src"}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
